feat: create Auth Module
