# app/internal/entity/user_entity.go
@@ -1,0 +1,14 @@
+package entity
+
+import (
+	"time"
+)
+
+type User struct {
+	ID           int       `gorm:"primaryKey;autoIncrement" json:"id"`
+	Name         string    `gorm:"type:varchar(100);not null" json:"name"`
+	Email        string    `gorm:"type:varchar(100);uniqueIndex;not null" json:"email"`
+	PasswordHash string    `gorm:"type:varchar(255);not null" json:"-"`
+	CreatedAt    time.Time `gorm:"autoCreateTime" json:"created_at"`
+	UpdatedAt    time.Time `gorm:"autoUpdateTime" json:"updated_at"`
+}
