# app/internal/model/auth_model.go
@@ -1,0 +1,18 @@
+package model
+
+type RegisterRequest struct {
+	Name     string `json:"name" validate:"required,max=100"`
+	Email    string `json:"email" validate:"required,email,max=100"`
+	Password string `json:"password" validate:"required,min=6,max=100"`
+}
+
+type LoginRequest struct {
+	Email    string `json:"email" validate:"required,email,max=100"`
+	Password string `json:"password" validate:"required,min=6,max=100"`
+}
+
+type LoginResponse struct {
+	Token     string       `json:"token"`
+	ExpiresAt int64        `json:"expires_at"`
+	User      UserResponse `json:"user"`
+}
