# app/internal/model/user_model.go
@@ -1,0 +1,11 @@
+package model
+
+import "time"
+
+type UserResponse struct {
+	ID        int       `json:"id"`
+	Name      string    `json:"name"`
+	Email     string    `json:"email"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+}
